# milky-tags

./: .gitignore  README.md
debug/: template.html
project/: CMakeLists.txt  milky-tags.aps
shaders/imgui/: fragment.glsl  vertex.glsl
source/: browser.cpp  browser.hpp  entry.cpp  entry.hpp  program.cpp  program.hpp  search.cpp  search.hpp  start.cpp  tags.cpp  tags.hpp
